# crud-test-22

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/poc_crud_lib/: __init__.py
tests/: test_delete.py  test_update.py
tests/regression/: test_create.py  test_read.py
tests/safety/: test_create_safety.py  test_delete_safety.py  test_read_safety.py  test_update_safety.py
