[project]
name = "poc-crud-lib"
version = "0.1.0"
description = "JSON 파일 기반 CRUD POC 라이브러리"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poc_crud_lib"]

[tool.pytest.ini_options]
pythonpath = ["src"]
